(not finished) refactoring of Metadata and polishing the data integration steps...